Fallback when no image is found, modularised the JS

--- a/src/assets/_scss/partials/_post-single.scss
+++ b/src/assets/_scss/partials/_post-single.scss
@@ -8,17 +8,24 @@
   left: 0;
   right: 0;
   padding: 16.5px 20px 16.5px 75px;
-  color: rgba(white, .97);
+  color: rgba(black, .3);
   font-size: 14px;
   line-height: 32px;
-  text-shadow: 0 2px 15px rgba(black, .75);
+
+  @include post-image {
+    color: rgba(white, .97);
+    text-shadow: 0 2px 15px rgba(black, .75);
+  }
 
   a {
-    color: rgba(white, .97);
     text-decoration: none;
 
     &:hover, &:focus {
       text-decoration: underline;
+    }
+
+    @include post-image {
+      color: rgba(white, .97);
     }
   }
 
@@ -39,7 +46,7 @@
   }
 
   .post-meta-bar__side {
-    border-left: 1px solid rgba(white, .35);
+    border-left: 1px solid rgba(black, .05);
     padding-left: 16px;
 
     &.post-meta-bar__side--left {
@@ -50,48 +57,62 @@
       float: right;
       text-align: right;
     }
+
+    @include post-image {
+      border-color: rgba(white, .35);
+    }
   }
 }
 
-.post-header {}
+.post-header {
+  @include post-image {
+    background: {
+      color: black;
+      position: 50% 50%;
+      size: cover;
+    }
 
-.post-image {
-  background: {
-    color: #000;
-    position: 50% 50%;
-    size: cover;
-  }
-
-  display: table;
-  width: 100%;
-  color: white;
-  overflow: hidden;
-  z-index: 1;
-
-  a, a:hover, a:focus, .post-meta-item {
+    display: table;
+    width: 100%;
     color: white;
+    overflow: hidden;
+    z-index: 1;
   }
 
-  div {
-    display: table-cell;
-    height: 100%;
-    padding: 65px 20px;
-    text-shadow: 0 5px 20px rgba(black, .5);
-    vertical-align: bottom;
+  > {
+    div {
+      padding: 70px 0 0;
 
-    header {
-      max-width: 700px;
-      margin: 0 auto;
+      @include post-image {
+        display: table-cell;
+        height: 100%;
+        padding-bottom: 65px;
+        text-shadow: 0 5px 20px rgba(black, .5);
+        vertical-align: bottom;
+      }
+
+      .post-header-content {
+        padding: {
+          top: 0;
+          bottom: 0;
+        }
+      }
     }
   }
 
-  .fa-angle-down {
-    font-size: 32px;
-    margin: 64px auto 0;
-    color: rgba(255,255,255,0.75);
+  @include post-image {
+    a, a:hover, a:focus, .post-meta-item {
+      color: white;
+    }
 
-    &:hover {
-      color: #fff;
+    .fa-angle-down {
+      font-size: 32px;
+      margin: 64px auto 0;
+      color: rgba(255,255,255,0.75);
+
+      &:hover, &:focus {
+        color: white;
+      }
     }
   }
 }
