--- a/src/assets/_scss/style.scss
+++ b/src/assets/_scss/style.scss
@@ -3,6 +3,7 @@
 //----------------------------------*/
 
 @import "mixins/_breakpoints.scss";
+@import "mixins/_templates.scss";
 
 //----------------------------------*\
 // CONFIG MODULES
