--- a/src/default.hbs
+++ b/src/default.hbs
@@ -118,6 +118,8 @@
     <!-- Ghostium scripts -->
     <script src="/assets/js/drawer.js"></script>
     <script src="/assets/js/imageLoader.js"></script>
+    <script src="/assets/js/post.js"></script>
+    <script src="/assets/js/postImage.js"></script>
     <script src="/assets/js/readTime.js"></script>
     <script src="/assets/js/scripts.js"></script>
     <!-- endbuild -->
