--- a/src/post.hbs
+++ b/src/post.hbs
@@ -27,9 +27,9 @@
       </div>
     </div>
 
-    <div class="post-image">
+    <header class="post-header wrapper-post">
       <div>
-        <header class="post-header">
+        <div class="post-header-content wrapper-container">
           <h1 itemprop="name headline" class="post-title">
             {{{title}}}
           </h1>
@@ -57,9 +57,9 @@
               <a href="#disqus_thread" data-disqus-identifier="{{id}}">Comments</a>
             </li>
           </ul>
-        </header>
+        </div>
       </div>
-    </div>
+    </header>
 
     <section class="wrapper wrapper-post">
       <div class="wrapper-container">
