Dasherized script names

--- a/src/default.hbs
+++ b/src/default.hbs
@@ -117,10 +117,10 @@
 
     <!-- Ghostium scripts -->
     <script src="/assets/js/drawer.js"></script>
-    <script src="/assets/js/imageLoader.js"></script>
+    <script src="/assets/js/image-loader.js"></script>
     <script src="/assets/js/post.js"></script>
-    <script src="/assets/js/postImage.js"></script>
-    <script src="/assets/js/readTime.js"></script>
+    <script src="/assets/js/post-image.js"></script>
+    <script src="/assets/js/read-time.js"></script>
     <script src="/assets/js/scripts.js"></script>
     <!-- endbuild -->
 
