--- a/src/assets/_scss/mixins/_templates.scss
+++ b/src/assets/_scss/mixins/_templates.scss
@@ -1,3 +1,9 @@
+@mixin metabar-inversed {
+  .metabar--static.metabar--static--inversed & {
+    @content;
+  }
+}
+
 @mixin post-image {
   .post--image & {
     @content;
