--- a/src/assets/_scss/style.scss
+++ b/src/assets/_scss/style.scss
@@ -34,6 +34,7 @@
 @import "partials/_main.scss";
 @import "partials/_drawer.scss";
 @import "partials/_cover.scss";
+@import "partials/_metabar.scss";
 @import "partials/_post-list.scss";
 @import "partials/_post-single.scss";
 @import "partials/_footer.scss";
