--- a/src/default.hbs
+++ b/src/default.hbs
@@ -76,6 +76,7 @@
       <div class="surface">
         <div class="surface-container">
           <div data-pjax-container class="content">
+            {{> metabar this}}
             {{{body}}}
           </div>
         </div>
@@ -118,6 +119,7 @@
     <!-- Ghostium scripts -->
     <script src="/assets/js/drawer.js"></script>
     <script src="/assets/js/image-loader.js"></script>
+    <script src="/assets/js/metabar.js"></script>
     <script src="/assets/js/post.js"></script>
     <script src="/assets/js/post-image.js"></script>
     <script src="/assets/js/read-time.js"></script>
