--- a/src/tag.hbs
+++ b/src/tag.hbs
@@ -5,7 +5,7 @@
 <section class="wrapper" tabindex="0">
   <div class="wrapper-container">
     <header>
-      <p><h2>Posts tagged with <i>{{tag.name}}</i></h2></p>
+      <h2>Posts tagged with <i>{{tag.name}}</i></h2>
       <hr>
     </header>
 
