Fixed post header wrapper overlapping coffin nav

--- a/src/post.hbs
+++ b/src/post.hbs
@@ -2,7 +2,7 @@
 
 {{#post}}
   <article itemscope itemtype="http://schema.org/BlogPosting" role="article" class="post {{post_class}}">
-    <header class="post-header wrapper-post">
+    <header class="post-header wrapper wrapper-post">
       <div>
         <div class="post-header-content wrapper-container">
           <h1 itemprop="name headline" class="post-title">
