--- a/src/partials/metabar.hbs
+++ b/src/partials/metabar.hbs
@@ -28,6 +28,18 @@
   </div>
 
   <div class="metabar__side metabar__side--right">
-
+    {{#post}}
+      <span class="metabar-item metabar-item--social">
+        <a href="#" class="metabar-btn" data-action="share-twitter">
+          <i class="fa fa-fw fa-lg fa-twitter"></i>
+        </a>
+        <a href="#" class="metabar-btn" data-action="share-facebook">
+          <i class="fa fa-fw fa-lg fa-facebook"></i>
+        </a>
+        <a href="#" class="metabar-btn" data-action="share-gplus">
+          <i class="fa fa-fw fa-lg fa-google-plus"></i>
+        </a>
+      </span>
+    {{/post}}
   </div>
 </div>
