--- a/default.hbs
+++ b/default.hbs
@@ -58,6 +58,15 @@
 
     {{ghost_head}}
   </head>
+  <!-- Adding MathJax support. Borrowing from this blog : http://feynmanliang.com/mathjax-integration/ -->
+  {{! Mathjax configuration}}
+  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  
+  <script type"text/x-mathjax-config">
+  MathJax.Hub.Config({
+    tex2jax: {inlineMath: [['$', '$'], ['\\(','\\)']]}
+  });
+  </script>
   <body class="{{body_class}}">
 
     {{> drawer this}}
