--- a/partials/custom/config.hbs
+++ b/partials/custom/config.hbs
@@ -1,6 +1,10 @@
 {{! Your Google Analitycs ID }}
 var ga_ua = 'UA-XXXXX-X';
 
+{{! Your Google Analitycs ID }}
+var fb_id = 'UA-XXXXX-X';
+
+
 {{! Your Disqus shortname }}
 var disqus_shortname = 'example';
 
