--- a/partials/cover.hbs
+++ b/partials/cover.hbs
@@ -6,7 +6,9 @@
         <img src="{{@blog.logo}}" alt="Blog Logo">
       </a>
     {{/if}}
-    <h1 class="cover-title">{{@blog.title}}</h1>
-    <p class="cover-description">{{@blog.description}}</p>
+    <header>
+      <h1 class="cover-title">{{@blog.title}}</h1>
+      <p class="cover-description">{{{@blog.description}}}</p>
+    </header>
   </div>
 </aside>
