--- a/partials/custom/meta.hbs
+++ b/partials/custom/meta.hbs
@@ -4,8 +4,20 @@
 {{! The Twitter username of the author of this content }}
 <meta name="twitter:creator" content="@yourtwitter">
 
-{{! Change for Google Webmaster verification }}
-<meta name="google-site-verification" content="">
+{{! The Facebook profile URL of the author of this content }}
+<meta property="article:author" content="https://www.facebook.com/yourprofile">
+
+{{! The Facebook profile URL of the publisher of this content }}
+<meta property="article:publisher" content="https://www.facebook.com/yourblogprofile">
 
 {{! Change for Facebook Insight verification }}
 <meta property="fb:admins" content="">
+
+{{! Change for Google Webmaster verification }}
+<meta name="google-site-verification" content="">
+
+{{! The Google Plus profile URL of the author of this content }}
+<link rel="author" href="https://plus.google.com/yourprofile">
+
+{{! Android Lolipop Theme Color }}
+<meta name="theme-color" content="">
