--- a/src/default.hbs
+++ b/src/default.hbs
@@ -19,9 +19,14 @@
     <meta name="twitter:title" content="{{meta_title}}">
     <meta name="twitter:description" content="{{meta_description}}">
 
+    <meta property="og:url" content="{{@blog.url}}">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="{{meta_title}}">
+    <meta property="og:title" content="{{meta_title}}">  
     <meta property="og:description" content="{{meta_description}}">
+    <meta property="og:site_name" content="{{@blog.title}}">
+
+    <meta itemprop="name" content="{{meta_title}}">
+    <meta itemprop="description" content="{{meta_description}}">
 
     {{> custom/meta this}}
 
