Added comment to show source of script

--- a/post.hbs
+++ b/post.hbs
@@ -113,6 +113,7 @@
 </script>
 <script type=text/javascript>
 // script to add estimated number of minutes it will take to read the post
+//Found this solution while googling -https://ghost.org/forum/plugins/4443-post-estimated-read-time-for-hosted-ghost/
     var pageText = $('.post-body').text().replace(/\r?\n/g,'');
 
     var read_time = function(text){
