--- a/src/assets/_scss/partials/_main.scss
+++ b/src/assets/_scss/partials/_main.scss
@@ -61,6 +61,7 @@ body {
   outline: 0;
   background-color: $background-color;
   overflow: auto;
+  min-height: 100%;
 
   @include breakpoint(medium) {
     position: relative;
