--- a/src/assets/_scss/modules/_vars.scss
+++ b/src/assets/_scss/modules/_vars.scss
@@ -30,7 +30,7 @@ $primary-color: #57A3E8;
 $title-font-family: "Open Sans", "Myriad Pro", "Lucida Grande",
   "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 
-$text-font-family: "Droid Serif", Georgia, Cambria, "Times New Roman",
+$text-font-family: "Noto Serif", Georgia, Cambria, "Times New Roman",
   Times, serif;
 
 //----------------------------------*\
