import highlight.ls in default.hbs to let the code where in post achieve highlighted

--- a/default.hbs
+++ b/default.hbs
@@ -37,6 +37,7 @@
     <link href="//fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic|Open+Sans:700,400&subset=latin,latin-ext" rel="stylesheet">
 
     <link rel="stylesheet" href="{{asset 'css/main.min.css'}}"/>
+    <link href="//cdn.bootcss.com/highlight.js/9.0.0/styles/tomorrow.min.css" rel="stylesheet">
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script type="text/javascript">
@@ -103,5 +104,7 @@
         }());
       }
     </script>
+    <script src="//cdn.bootcss.com/highlight.js/9.0.0/highlight.min.js"></script>
+    <script >hljs.initHighlightingOnLoad();</script>
   </body>
 </html>
