update bower dependencies to latest; move common head requests to prefetched CDN

--- a/src/default.hbs
+++ b/src/default.hbs
@@ -36,8 +36,10 @@
     <link href="//fonts.googleapis.com/" rel="dns-prefetch">
     <link href="//fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic|Open+Sans:700,400&subset=latin,latin-ext" rel="stylesheet">
 
+    <link href="//cdnjs.cloudflare.com/" rel="dns-prefetch">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+
     <!-- build:css({src,.tmp}) /assets/css/main.min.css -->
-    <link href="/assets/_components/font-awesome/css/font-awesome.css">
     <link href="/assets/_components/prism/themes/prism.css">
     <link href="/assets/_components/prism/plugins/autolinker/prism-autolinker.css">
     <link href="/assets/_components/pace/themes/pace-theme-minimal.css">
@@ -65,9 +67,11 @@
       GHOSTIUM.enablePjax = typeof enable_pjax !== 'undefined' ? enable_pjax : true;
     </script>
 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/pace.min.js"></script>
+
     <!-- build:js /assets/js/head-scripts.min.js -->
-    <script src="/assets/_components/modernizr/modernizr.js"></script>
-    <script src="/assets/_components/pace/pace.js"></script>
     <!-- endbuild -->
 
     {{ghost_head}}
