--- a/src/default.hbs
+++ b/src/default.hbs
@@ -96,12 +96,18 @@
     <!-- build:js /assets/js/foot-scripts.min.js -->
     <script src="/assets/_components/fastclick/lib/fastclick.js"></script>
 
-    <!-- PrismJS core, aditional languages and plugins -->
-    <script src="/assets/_components/prism/prism.js"></script>
+    <!-- PrismJS core and base languages -->
+    <script src="/assets/_components/prism/components/prism-core.js"></script>
+    <script src="/assets/_components/prism/components/prism-markup.js"></script>
+    <script src="/assets/_components/prism/components/prism-css.js"></script>
+    <script src="/assets/_components/prism/components/prism-clike.js"></script>
+    <script src="/assets/_components/prism/components/prism-javascript.js"></script>
+    <script src="/assets/_components/prism/components/prism-file-highlight.js"></script>
+
+    <!-- PrismJS additional languages and plugins -->
     <script src="/assets/_components/prism/components/prism-aspnet.js"></script>
     <script src="/assets/_components/prism/components/prism-bash.js"></script>
     <script src="/assets/_components/prism/components/prism-c.js"></script>
-    <script src="/assets/_components/prism/components/prism-clike.js"></script>
     <script src="/assets/_components/prism/components/prism-coffescript.js"></script>
     <script src="/assets/_components/prism/components/prism-cpp.js"></script>
     <script src="/assets/_components/prism/components/prism-csharp.js"></script>
