extend prism with additional trending languages

--- a/src/default.hbs
+++ b/src/default.hbs
@@ -112,11 +112,15 @@
     <script src="/assets/_components/prism/components/prism-cpp.js"></script>
     <script src="/assets/_components/prism/components/prism-csharp.js"></script>
     <script src="/assets/_components/prism/components/prism-css-extras.js"></script>
+    <script src="/assets/_components/prism/components/prism-docker.js"></script>
     <script src="/assets/_components/prism/components/prism-gherkin.js"></script>
+    <script src="/assets/_components/prism/components/prism-git.js"></script>
     <script src="/assets/_components/prism/components/prism-go.js"></script>
     <script src="/assets/_components/prism/components/prism-groovy.js"></script>
+    <script src="/assets/_components/prism/components/prism-haml.js"></script>
     <script src="/assets/_components/prism/components/prism-http.js"></script>
     <script src="/assets/_components/prism/components/prism-java.js"></script>
+    <script src="/assets/_components/prism/components/prism-markdown.js"></script>
     <script src="/assets/_components/prism/components/prism-nsis.js"></script>
     <script src="/assets/_components/prism/components/prism-php.js"></script>
     <script src="/assets/_components/prism/components/prism-php-extras.js"></script>
@@ -124,6 +128,9 @@
     <script src="/assets/_components/prism/components/prism-ruby.js"></script>
     <script src="/assets/_components/prism/components/prism-scss.js"></script>
     <script src="/assets/_components/prism/components/prism-sql.js"></script>
+    <script src="/assets/_components/prism/components/prism-swift.js"></script>
+    <script src="/assets/_components/prism/components/prism-typescript.js"></script>
+    <script src="/assets/_components/prism/components/prism-yaml.js"></script>
     <script src="/assets/_components/prism/plugins/autolinker/prism-autolinker.js"></script>
 
     <script src="/assets/_components/jquery-pjax/jquery.pjax.js"></script>
