Adds bower jQuery to the src default.hbs

--- a/src/default.hbs
+++ b/src/default.hbs
@@ -68,6 +68,7 @@
     <!-- build:js /assets/js/head-scripts.min.js -->
     <script src="/assets/_components/modernizr/modernizr.js"></script>
     <script src="/assets/_components/pace/pace.js"></script>
+    <script src="/assets/_components/jquery/jquery.js"></script>
     <!-- endbuild -->
 
     {{ghost_head}}
