--- a/default.hbs
+++ b/default.hbs
@@ -36,9 +36,8 @@
     <link href="//fonts.googleapis.com/" rel="dns-prefetch">
     <link href="//fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic|Open+Sans:700,400&subset=latin,latin-ext" rel="stylesheet">
 
-    <link rel="stylesheet" href="{{asset 'css/main.min.css'}}"/>
+    <link rel="stylesheet" href="{{asset 'css/main.min.css'}}">
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script type="text/javascript">
       {{> custom/config}}
 
