--- a/src/page.hbs
+++ b/src/page.hbs
@@ -12,9 +12,9 @@
           </header>
           <aside class="post-side">
             <div class="post-author">
-              {{#if author.image}}
+              {{#if author.progile_image}}
                 <a href="{{author.website}}" class="post-author-avatar">
-                  <img src="{{author.image}}" alt="{{author.name}}">
+                  <img src="{{author.progile_image}}" alt="{{author.name}}">
                 </a>
               {{/if}}
               <div class="post-author-info">
@@ -30,9 +30,9 @@
           </div>
           <footer class="post-footer">
             <div itemprop="author" itemscope itemtype="http://schema.org/Person" class="post-author">
-              {{#if author.image}}
+              {{#if author.progile_image}}
                 <a href="{{author.website}}" class="post-author-avatar">
-                  <img itemprop="image" src="{{author.image}}" alt="{{author.name}}">
+                  <img itemprop="image" src="{{author.progile_image}}" alt="{{author.name}}">
                 </a>
               {{/if}}
               <div class="post-author-info">
