Update to work with Ghost v1.21.x

--- a/post.hbs
+++ b/post.hbs
@@ -21,7 +21,7 @@
                 </li>
               {{/if}}
               <li class="post-meta-item">
-                <a href="#disqus_thread" data-disqus-identifier="{{id}}">Comments</a>
+                <a href="#disqus_thread" data-disqus-identifier="{{comment_id}}">Comments</a>
               </li>
             </ul>
             <h1 itemprop="name headline" class="post-title"><a href="{{url}}" itemprop="url" data-pjax title="{{{title}}}">{{{title}}}</a></h1>
