FEATURE: Add Discourse comments support

--- a/src/default.hbs
+++ b/src/default.hbs
@@ -62,6 +62,7 @@
       window.GHOSTIUM = {};
       GHOSTIUM.haveGA = typeof ga_ua !== 'undefined' && ga_ua !== 'UA-XXXXX-X';
       GHOSTIUM.haveDisqus = typeof disqus_shortname !== 'undefined' && disqus_shortname !== 'example';
+      GHOSTIUM.haveDiscourse = typeof discourse_url !== 'undefined' && discourse_url !== 'http://example.com';
       GHOSTIUM.enablePjax = typeof enable_pjax !== 'undefined' ? enable_pjax : true;
     </script>
 
