--- a/src/partials/custom/config.hbs
+++ b/src/partials/custom/config.hbs
@@ -4,5 +4,8 @@ var ga_ua = 'UA-XXXXX-X';
 {{! Your Disqus shortname }}
 var disqus_shortname = 'example';
 
+{{! Your Dicourse URL }}
+var discourse_url = 'http://example.com';
+
 {{! Enable Pjax for asynchronous (AJAX) content loading }}
 var enable_pjax = true;
